@@ -35,6 +35,7 @@ in
     freetube = enabled;
     filezilla = enabled;
     gcolor = enabled;
+    gscan2pdf = enabled;
     musescore = enabled;
     museeks = enabled;
     nautilus.enable = true;
